--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "googlebooks",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js"
   },
   "repository": {
     "type": "git",
@@ -12,6 +17,10 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "gh-pages": "^2.0.1",
+    "nodemon": "^1.18.7",
   "bugs": {
     "url": "https://github.com/slsmi285/googleBooks/issues"
   },
